feat: todolist compolite

--- a/1_week_mission/signUp/index.html
+++ b/1_week_mission/signUp/index.html
@@ -38,6 +38,15 @@
         <button type="submit" id="signupButton" disabled>회원가입</button>
       </form>
     </div>
+    <div class="modal-wrapper" style="display: flex">
+      <div class="modal">
+        <div class="modal-title">가입 성공!</div>
+        <p>축하해요!!</p>
+        <div class="close-wrapper">
+          <button id="close">닫기</button>
+        </div>
+      </div>
+    </div>
     <script src="./src/script.js"></script>
   </body>
 </html>
