--- a/1_week_mission/toDoList/index.html
+++ b/1_week_mission/toDoList/index.html
@@ -9,14 +9,15 @@
   <body>
     <div class="container">
       <input type="text" id="todoInput" placeholder="Enter a to-do" />
-      <button onclick="addToDo()">Add</button>
-      <div>
-        <h2>To-Do List</h2>
-        <ul id="todoList" class="todo-list"></ul>
-      </div>
-      <div>
-        <h2>Accomplished List</h2>
-        <ul id="accomplishedList" class="todo-list"></ul>
+      <div class="list-container">
+        <div class="list-item">
+          <h2>To-Do List</h2>
+          <ul id="todoList" class="todo-list"></ul>
+        </div>
+        <div class="list-item">
+          <h2>Accomplished List</h2>
+          <ul id="accomplishedList" class="todo-list"></ul>
+        </div>
       </div>
     </div>
     <script src="./src/script.js"></script>
