--- a/1_week_mission/signUp/index.html
+++ b/1_week_mission/signUp/index.html
@@ -3,39 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Membership Registration</title>
+    <title>회원가입</title>
     <link rel="stylesheet" href="./src/styles.css" />
   </head>
   <body>
     <div class="container">
-      <h2>Membership Registration</h2>
+      <h1>회원가입</h1>
       <form id="registrationForm">
         <div class="form-group">
-          <label for="name">Name:</label>
+          <label for="name">이름</label>
           <input type="text" id="name" name="name" />
           <div id="nameError" class="error"></div>
         </div>
         <div class="form-group">
-          <label for="email">Email:</label>
+          <label for="email">이메일</label>
           <input type="text" id="email" name="email" />
           <div id="emailError" class="error"></div>
         </div>
         <div class="form-group">
-          <label for="age">Age:</label>
+          <label for="age">나이</label>
           <input type="number" id="age" name="age" />
           <div id="ageError" class="error"></div>
         </div>
         <div class="form-group">
-          <label for="password">Password:</label>
+          <label for="password">비밀번호</label>
           <input type="password" id="password" name="password" />
           <div id="passwordError" class="error"></div>
         </div>
         <div class="form-group">
-          <label for="confirmPassword">Confirm Password:</label>
+          <label for="confirmPassword">비밀번호 확인</label>
           <input type="password" id="confirmPassword" name="confirmPassword" />
           <div id="confirmPasswordError" class="error"></div>
         </div>
-        <button type="submit" id="signupButton" disabled>Sign Up</button>
+        <button type="submit" id="signupButton" disabled>회원가입</button>
       </form>
     </div>
     <script src="./src/script.js"></script>
