--- a/1_week_mission/signUp/index.html
+++ b/1_week_mission/signUp/index.html
@@ -12,35 +12,30 @@
       <form id="registrationForm">
         <div class="form-group">
           <label for="name">Name:</label>
-          <input type="text" id="name" name="name" required />
+          <input type="text" id="name" name="name" />
           <div id="nameError" class="error"></div>
         </div>
         <div class="form-group">
           <label for="email">Email:</label>
-          <input type="email" id="email" name="email" required />
+          <input type="email" id="email" name="email" />
           <div id="emailError" class="error"></div>
         </div>
         <div class="form-group">
           <label for="age">Age:</label>
-          <input type="number" id="age" name="age" required />
+          <input type="number" id="age" name="age" />
           <div id="ageError" class="error"></div>
         </div>
         <div class="form-group">
           <label for="password">Password:</label>
-          <input type="password" id="password" name="password" required />
+          <input type="password" id="password" name="password" />
           <div id="passwordError" class="error"></div>
         </div>
         <div class="form-group">
           <label for="confirmPassword">Confirm Password:</label>
-          <input
-            type="password"
-            id="confirmPassword"
-            name="confirmPassword"
-            required
-          />
+          <input type="password" id="confirmPassword" name="confirmPassword" />
           <div id="confirmPasswordError" class="error"></div>
         </div>
-        <button type="submit" id="signupButton" disabled>Sign Up</button>
+        <button type="submit" id="signupButton">Sign Up</button>
       </form>
     </div>
     <script src="./src/script.js"></script>
