--- a/1_week_mission/signUp/index.html
+++ b/1_week_mission/signUp/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="form-group">
           <label for="email">Email:</label>
-          <input type="email" id="email" name="email" />
+          <input type="text" id="email" name="email" />
           <div id="emailError" class="error"></div>
         </div>
         <div class="form-group">
@@ -35,7 +35,7 @@
           <input type="password" id="confirmPassword" name="confirmPassword" />
           <div id="confirmPasswordError" class="error"></div>
         </div>
-        <button type="submit" id="signupButton">Sign Up</button>
+        <button type="submit" id="signupButton" disabled>Sign Up</button>
       </form>
     </div>
     <script src="./src/script.js"></script>
