feat: fix password check system

--- a/1_week_mission/signUp/index.html
+++ b/1_week_mission/signUp/index.html
@@ -38,7 +38,7 @@
         <button type="submit" id="signupButton" disabled>회원가입</button>
       </form>
     </div>
-    <div class="modal-wrapper" style="display: flex">
+    <div class="modal-wrapper" style="display: none">
       <div class="modal">
         <div class="modal-title">가입 성공!</div>
         <p>축하해요!!</p>
